#378: Fix alpaca key being null in AlpacaSession